Revision history for Perl extension HTML::Template::Compiled.

1.000_001
- Minor optimizations

1.000 Tue Nov 13 20:45:44 CET 2012
- regular release

0.99_001 Sat Aug  4 17:32:03 CEST 2012
- Bugfix: reloading changed includes didn't always work

0.99 Mon Jul  2 21:48:39 CEST 2012
- fixed tests (deprecation in perl 5.17 and Data::TreeDumper prereq)
- also see developer version changes

0.98_003 Sun Jun 10 19:25:15 CEST 2012
- removed test cache directory from distribution
- added some modules to recommends

0.98_002 Wed Jun  6 20:43:05 CEST 2012
- Workaround for using var names with dollars:
  local $HTML::Template::Compiled::Compiler::DISABLE_NEW_ALIAS = 1;

0.98_001 Mon Jun  4 23:53:45 CEST 2012
- require perl 5.8.1
- Hotfix for include_var and file caching

0.98 Mon Jun  4 18:18:40 CEST 2012
- IMPORTANT: Change: use aliases (alias=..., SET_VAR) via $aliasname.
  USE_VARS will be removed in the future. Old alias syntax still works
  for now.

0.97_006 Sun Jun  3 19:26:50 CEST 2012
- new plugin HTML::Template::Compiled::Plugin::NumberFormat

0.97_005 Sat Jun  2 12:47:06 CEST 2012
- New feature: option cache_debug
- New feature: TMPL_WRAPPER
- Another bugfix for search_path_on_include

0.97_004 Sun May 20 18:38:32 CEST 2012
- Change: Implemented searching the path and search_path_on_include like
  in HTML::Template (finally) and add an additional value. PLEASE TEST!
- Improved file cache performance
- Bugfix: old bug with invalid tags in noparse, verbatim, comment
- Remove old Storable workaround (0.94_002)

0.97_001 Thu May 17 14:54:30 CEST 2012
- fix HTML::Template::Compiled::Classic: allow every character in template
  var names (RT 70676)
- New option expire_time instead of global HTML::Template::Compiled->ExpireTime
- Added loop context vars __even__, __outer__
- Change: removed documentation of class methods ->CaseSensitive,
  ->SearchPathOnInclude, ->UseQuery - will be deprecated
- Added strict option

0.97 Tue May  8 19:19:00 CEST 2012